--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
-        MSBuild.exe ./HeadShow.sln -property:Configuration=Release
+        MSBuild.exe ./Survival_Fly.sln -property:Configuration=Release
       shell: bash
     
     - name: MkDirs
@@ -54,14 +54,14 @@ jobs:
         mkdir D:/out/sdk/Lib
         mkdir D:/out/sdk/Header
         mkdir D:/out/plugins
-        mkdir D:/out/plugins/HeadShow
+        mkdir D:/out/plugins/SurvivalFly
     
     - name: Copy Out Files
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
         cp x64/Release/*.dll D:/out/plugins
         cp x64/Release/*.pdb D:/out/plugins
-        cp HeadShow/*.json D:/out/plugins/HeadShow
+        cp SurvivalFly/*.json D:/out/plugins/SurvivalFly
       shell: bash
 
     - name: Upload plugins
@@ -84,4 +84,4 @@ jobs:
         files: |
           D:/out/plugins.zip
       env:
-          GITHUB_REPOSITORY: HuoHuas001/HeadShow
+          GITHUB_REPOSITORY: HuoHuas001/Survival_Fly
