--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build HeadShow
+name: Build Survival_Fly
 
 on: [push]
 
@@ -31,6 +31,7 @@ jobs:
     - name: Build Library
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
+        ls
         cd SDK/Tools
         mkdir ../LiteLoader
         mkdir ../LiteLoader/Lib
