--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -34,6 +34,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)SDK\Header\third-party;$(SolutionDir)SDK\Header;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
+    <PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -57,20 +58,8 @@
       <DelayLoadDLLs>bedrock_server.dll</DelayLoadDLLs>
     </Link>
     <PreBuildEvent>
-      <Command>if not exist $(SolutionDir)SDK\Lib\bedrock_server_api.lib goto process
-if not exist $(SolutionDir)SDK\Lib\bedrock_server_var.lib goto process
-goto end
-
-:process
-cd /d $(SolutionDir)\SDK\Tools\
-if exist $(LocalDebuggerWorkingDirectory)\bedrock_server.pdb (
-LibraryBuilder.exe -o ..\Lib\ $(LocalDebuggerWorkingDirectory)
-) else (
-LibraryBuilder.exe -o ..\Lib\
-)
-
-:end
-			</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
     <PostBuildEvent>
       <Command>copy  "$(TargetPath)" "$(LocalDebuggerWorkingDirectory)plugins\"
