--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
     - name: Download SDK
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
-        git submodule add https://github.com/LiteLDev/LiteLoaderSDK.git ./SDK
-        mv ./LiteLoaderSDK ./SDK
+        git submodule init
+      #  mv ./LiteLoaderSDK ./SDK
       shell: bash
      
     - name: Download Server
