--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       run: |
         git submodule add https://github.com/LiteLDev/LiteLoaderSDK.git ./LLDSK
-        mv ./LLSDK ./SDK
+        mv ./LLSDK ../SDK
       shell: bash
      
     - name: Download Server
