--- a/SurvivalFly/config.json
+++ b/SurvivalFly/config.json
@@ -1,1 +1,9 @@
-{"FallingPoint":3,"allowList":["msz728","2535420898564206"],"onlyAllow":true,"onlyOp":false,"slowFalling":true}
+{
+    "FallingPoint": 3,
+    "allowList": [],
+    "onlyAllow": true,
+    "onlyOp": false,
+    "slowFalling": true,
+    "particle": ""
+  }
+  
