--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -35,7 +35,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)SDK\Header\third-party;$(SolutionDir)SDK\Header;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
-    <PostBuildEventUseInBuild>false</PostBuildEventUseInBuild>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -63,8 +63,9 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>copy  "$(TargetPath)" "$(LocalDebuggerWorkingDirectory)\plugins\"
-</Command>
+      <Command>if exist $(LocalDebuggerWorkingDirectory)\plugins\ (
+copy /Y "$(TargetPath)" "$(LocalDebuggerWorkingDirectory)\plugins\"
+)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -77,6 +78,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Plugin.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
