--- a/Template/Template.vcxproj
+++ b/Template/Template.vcxproj
@@ -35,7 +35,7 @@
     <LinkIncremental>false</LinkIncremental>
     <IncludePath>$(SolutionDir)SDK\Header\third-party;$(SolutionDir)SDK\Header;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
-    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
+    <PostBuildEventUseInBuild>false</PostBuildEventUseInBuild>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -63,7 +63,7 @@
       </Command>
     </PreBuildEvent>
     <PostBuildEvent>
-      <Command>if exist $(LocalDebuggerWorkingDirectory)\plugins\ (
+      <Command>if exist "$(LocalDebuggerWorkingDirectory)\plugins\" (
 copy /Y "$(TargetPath)" "$(LocalDebuggerWorkingDirectory)\plugins\"
 )</Command>
     </PostBuildEvent>
